--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Frais2.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Frais2.fxml
@@ -11,13 +11,27 @@
    <children>
       <Label layoutX="20.0" layoutY="61.0" style="-fx-font-weight: bold;" text="Journée du " />
       <Label fx:id="dateJournee" layoutX="101.0" layoutY="61.0" style="-fx-font-weight: bold;" text="12/34/5678" />
-      <Label layoutX="305.0" layoutY="105.0" text="Frais de transport" underline="true" />
-      <Label layoutX="271.0" layoutY="141.0" text="Type :" />
-      <TextField fx:id="typeFraisTransport" layoutX="334.0" layoutY="136.0" prefHeight="27.0" prefWidth="115.0" />
-      <Label layoutX="257.0" layoutY="188.0" text="Montant :" />
-      <TextField fx:id="montantFraisTransport" layoutX="363.0" layoutY="183.0" prefHeight="27.0" prefWidth="57.0" />
-      <Label layoutX="427.0" layoutY="187.0" text="€" />
-      <VBox fx:id="nbrKilometreLayout" alignment="TOP_CENTER" layoutY="260.0" prefHeight="120.0" prefWidth="700.0">
+      <Label layoutX="295.0" layoutY="86.0" text="Frais de transport" underline="true" />
+      <Label layoutX="254.0" layoutY="122.0" text="Type :" />
+      <TextField fx:id="typeFraisTransport" layoutX="337.0" layoutY="118.0" prefHeight="27.0" prefWidth="166.0" />
+      <Label layoutX="254.0" layoutY="169.0" text="Montant :" />
+      <TextField fx:id="montantFraisTransport" layoutX="337.0" layoutY="164.0" prefHeight="27.0" prefWidth="77.0" />
+      <Label layoutX="420.0" layoutY="168.0" text="€" />
+      <VBox layoutY="202.0" prefHeight="105.0" prefWidth="700.0">
+         <children>
+            <AnchorPane prefHeight="200.0" prefWidth="200.0">
+               <children>
+                  <Label layoutX="315.0" text="Autres frais" underline="true" />
+                  <Label layoutX="255.0" layoutY="31.0" text="Type :" />
+                  <TextField fx:id="typeAutreFrais" layoutX="338.0" layoutY="27.0" prefHeight="27.0" prefWidth="166.0" />
+                  <Label layoutX="255.0" layoutY="76.0" text="Montant :" />
+                  <TextField fx:id="montantAutreFrais" layoutX="338.0" layoutY="74.0" prefHeight="27.0" prefWidth="77.0" />
+                  <Label layoutX="422.0" layoutY="78.0" text="€" />
+               </children>
+            </AnchorPane>
+         </children>
+      </VBox>
+      <VBox fx:id="nbrKilometreLayout" alignment="TOP_CENTER" layoutY="306.0" prefHeight="120.0" prefWidth="700.0">
          <children>
             <Label prefHeight="35.0" prefWidth="219.0" text="Nombre de kilomètres parcourus" underline="true">
                <VBox.margin>
@@ -43,6 +57,6 @@
       </VBox>
       <Button fx:id="boutonValider" layoutX="528.0" layoutY="450.0" mnemonicParsing="false" onAction="#validerJournee" text="Journée suivante" />
       <Button layoutX="51.0" layoutY="448.0" mnemonicParsing="false" onAction="#retourFrais1" prefHeight="30.0" prefWidth="100.0" text="&lt;&lt; Retour" />
-      <Button fx:id="boutonQuitter" layoutX="288.0" layoutY="440.0" mnemonicParsing="false" onAction="#sauvegarderFraisMission" prefWidth="150.0" text="Sauvegarder la journée et quitter" textAlignment="CENTER" wrapText="true" />
+      <Button fx:id="boutonQuitter" layoutX="275.0" layoutY="441.0" mnemonicParsing="false" onAction="#sauvegarderFraisMission" prefWidth="150.0" text="Sauvegarder la journée et quitter" textAlignment="CENTER" wrapText="true" />
    </children>
 </AnchorPane>
