--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/responsable/view/ItemMissionResponsable.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/responsable/view/ItemMissionResponsable.fxml
@@ -5,57 +5,56 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="itemMission" onMouseClicked="#choisirMission" prefHeight="100.0" prefWidth="347.0" style="-fx-border-color: black;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.responsable.view.ItemMissionResponsableController">
+<VBox fx:id="itemMission" onMouseClicked="#choisirMission" prefHeight="100.0" prefWidth="597.0" style="-fx-border-color: grey; -fx-border-width: 0 0 1 0;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.responsable.view.ItemMissionResponsableController">
    <children>
-      <HBox prefHeight="25.0" prefWidth="200.0">
-         <children>
-            <Label fx:id="lieuLabel" prefHeight="25.0" prefWidth="100.0" text="Limoges">
-               <padding>
-                  <Insets left="10.0" />
-               </padding>
-               <HBox.margin>
-                  <Insets left="10.0" />
-               </HBox.margin>
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Label>
-            <Label fx:id="nomLabel" alignment="CENTER_RIGHT" prefHeight="25.0" prefWidth="198.0" text="Jacques DELARUE">
-               <padding>
-                  <Insets left="10.0" />
-               </padding>
-               <HBox.margin>
-                  <Insets right="10.0" />
-               </HBox.margin>
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Label>
-         </children>
-      </HBox>
-      <Label fx:id="datesLabel" alignment="CENTER" prefHeight="25.0" prefWidth="345.0" text="Du 12/00/0000 au 00/00/0000">
-         <font>
-            <Font size="13.0" />
-         </font>
-      </Label>
-      <GridPane>
+      <GridPane alignment="CENTER" prefHeight="99.0" prefWidth="597.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button mnemonicParsing="false" onAction="#afficherPDF" prefWidth="75.0" text="Afficher" />
-            <Button fx:id="boutonEnvoyer" disable="true" mnemonicParsing="false" prefHeight="27.0" prefWidth="81.0" text="Envoyer" GridPane.columnIndex="2" />
-            <Button fx:id="boutonSigner" mnemonicParsing="false" prefHeight="27.0" prefWidth="81.0" text="Signer" GridPane.columnIndex="1" />
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#afficherPDF" prefWidth="77.0" text="Afficher" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="55.0" />
+               </GridPane.margin></Button>
+            <Button fx:id="boutonEnvoyer" alignment="CENTER" disable="true" mnemonicParsing="false" prefHeight="27.0" prefWidth="81.0" text="Envoyer" GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="55.0" />
+               </GridPane.margin></Button>
+            <Button fx:id="boutonSigner" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="81.0" text="Signer" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="55.0" />
+               </GridPane.margin></Button>
+            <Label fx:id="lieuLabel" prefHeight="25.0" prefWidth="195.0" text="Limoges">
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label fx:id="nomLabel" alignment="CENTER_RIGHT" prefHeight="25.0" prefWidth="194.0" text="Jacques DELARUE" GridPane.columnIndex="2">
+               <font>
+                  <Font size="13.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets right="15.0" />
+               </GridPane.margin>
+            </Label>
+            <Label fx:id="datesLabel" alignment="CENTER" prefHeight="25.0" prefWidth="345.0" text="Du 12/00/0000 au 00/00/0000" GridPane.columnIndex="1">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
          </children>
          <VBox.margin>
             <Insets left="15.0" />
