--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Frais1.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Frais1.fxml
@@ -32,5 +32,7 @@
       <Label layoutX="268.0" layoutY="410.0" text="Justificatif :" />
       <TextField fx:id="nbrJustifDecouchers" layoutX="372.0" layoutY="405.0" prefHeight="27.0" prefWidth="42.0" />
       <Button layoutX="528.0" layoutY="446.0" mnemonicParsing="false" onAction="#afficherFrais2" prefHeight="30.0" prefWidth="100.0" text="Suivant &gt;&gt;" />
+      <Button layoutX="285.0" layoutY="447.0" mnemonicParsing="false" onAction="#afficherJourSuivant" text="Aucun frais pour ce jour" />
+      <Button fx:id="btnRetour" layoutX="57.0" layoutY="447.0" mnemonicParsing="false" onAction="#afficherJourAvant" text="Journée précédente" />
    </children>
 </AnchorPane>
